--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script>
         function redirectBasedOnDevice() {
             var userAgent = navigator.userAgent || navigator.vendor || window.opera;
-            if (/android|iPad|iPhone|iPod|BlackBerry|Windows Phone/i.test(userAgent)) {
+            if (/android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(userAgent)) {
                 // Redirect to mobile version
                 window.location.href = 'mobile/index.html';
             } else {
