--- a/index.html
+++ b/index.html
@@ -5,17 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting...</title>
     <script>
-        function redirectBasedOnDevice() {
-            var userAgent = navigator.userAgent || navigator.vendor || window.opera;
-            if (/android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(userAgent)) {
-                // Redirect to mobile version
+        function redirectBasedOnScreenSize() {
+            const mobileBreakpoint = 768;
+            if (window.matchMedia(`(max-width: ${mobileBreakpoint}px)`).matches) {
                 window.location.href = 'mobile/index.html';
             } else {
-                // Redirect to PC version
                 window.location.href = 'pc/index.html';
             }
         }
-        window.onload = redirectBasedOnDevice;
+        window.addEventListener('DOMContentLoaded', redirectBasedOnScreenSize);
     </script>
 </head>
 <body>
